記述微修正

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-﻿/*
+﻿@charset "UTF-8";
+/*
 Theme Name: Natural Company
 Description: 夜空エトが作成しているコーポレートサイト向けのオリジナルテーマ。
 Theme URI: https://demo.yozora-eto.com/theme/natural-company/
@@ -8,4 +9,3 @@ Version: 1.0.0
 License: GNU General Public License
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
-@charset "UTF-8";
